ADDED: Vector and a little physics

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="engine/CollisionHandler.js"></script>
     <script src="engine/Collision.js"></script>
     
-    <script src="engine/Point2D.js"></script>
+    <script src="engine/Vector2D.js"></script>
     <script src="engine/Grid.js"></script>
     <script src="main.js"></script>
 </html>
