ADDED: tree sprite, wood sprite

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <canvas  id="canvas-game"></canvas>
     <script src="entity/BaseEntity.js"></script>
     <script src="entity/Player.js"></script>
+    <script src="entity/Tree.js"></script>
     <script src="engine/Game.js"></script>
     <script src="engine/Box.js"></script>
     
