--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body >
     <canvas  id="canvas-game"></canvas>
     <script src="entity/BaseEntity.js"></script>
+    <script src="entity/Warehouse.js"></script>
     <script src="entity/Player.js"></script>
     <script src="entity/Tree.js"></script>
     <script src="engine/Game.js"></script>
