--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <script src="engine/Game.js"></script>
     <script src="engine/Box.js"></script>
     
+    <script src="terrain/Grass.js"></script>
+    <script src="terrain/Sand.js"></script>
+    
     <script src="engine/MouseHandler.js"></script>
     <script src="engine/Mouse.js"></script>
     <script src="engine/CollisionHandler.js"></script>
