--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
   </head>
   <body >
     <canvas  id="canvas-game"></canvas>
+
+    <script src="behavior_tree/BTNode.js"></script>
+    <script src="behavior_tree/BTSelector.js"></script>
+    <script src="behavior_tree/BTSequence.js"></script>
+    <script src="behavior_tree/BTInverter.js"></script>
+    <script src="behavior_tree/btvillage/btwork/FindResourceNode.js"></script>
+    <script src="behavior_tree/btvillage/btwork/GatherResourceNode.js"></script>
+    <script src="behavior_tree/btvillage/btwork/HasCapacityNode.js"></script>
+    <script src="behavior_tree/btvillage/btwork/MoveToNode.js"></script>
+    <script src="behavior_tree/btvillage/FollowTheMouse.js"></script>
+    <script src="behavior_tree/btvillage/isMouseNearby.js"></script>
+
     <script src="entity/BaseEntity.js"></script>
     <script src="entity/Warehouse.js"></script>
     <script src="entity/Player.js"></script>
@@ -29,6 +41,7 @@
     <script src="engine/CollisionHandler.js"></script>
     <script src="engine/Collision.js"></script>
     <script src="engine/ListenerHandler.js"></script>
+  
     
     <script src="engine/Vector2D.js"></script>
     <script src="engine/Grid.js"></script>
