--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="behavior_tree/BTSelector.js"></script>
     <script src="behavior_tree/BTSequence.js"></script>
     <script src="behavior_tree/BTInverter.js"></script>
+    <script src="behavior_tree/btvillage/btwork/IdleNode.js"></script>
     <script src="behavior_tree/btvillage/btwork/FindResourceNode.js"></script>
     <script src="behavior_tree/btvillage/btwork/GatherResourceNode.js"></script>
     <script src="behavior_tree/btvillage/btwork/HasCapacityNode.js"></script>
