--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="entity/Warehouse.js"></script>
     <script src="entity/Player.js"></script>
     <script src="entity/Tree.js"></script>
+    <script src="entity/Stone.js"></script>
     <script src="engine/Game.js"></script>
     <script src="engine/Box.js"></script>
     
