A bunch of stuffs :p

--- a/index.html
+++ b/index.html
@@ -30,11 +30,19 @@
     <script src="behavior_tree/btvillage/btwork/FindWarehouseNode.js"></script>
     <script src="behavior_tree/btvillage/btwork/HasCapacity.js"></script>
     <script src="behavior_tree/btvillage/btwork/IsBagNotEmpty.js"></script>
+    <script src="behavior_tree/btvillage/btwork/AssingNewJob.js"></script>
+    <script src="behavior_tree/btvillage/btwork/HasNewJob.js"></script>
+    <script src="behavior_tree/btvillage/btwork/BuildNode.js"></script>
+    
+    <script src="collision/Kdtree.js"></script>
 
     <script src="entity/BaseEntity.js"></script>
     <script src="entity/Warehouse.js"></script>
+    <script src="entity/Building.js"></script>
     <script src="entity/Player.js"></script>
+    <script src="entity/Animation.js"></script>
     <script src="entity/Tree.js"></script>
+    <script src="entity/Food.js"></script>
     <script src="entity/Stone.js"></script>
     <script src="engine/Game.js"></script>
     <script src="engine/Box.js"></script>
