Add: House, resource and more

--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
     
     <script src="collision/Kdtree.js"></script>
 
+    <script src="animation/Animation.js"></script>
     <script src="entity/BaseEntity.js"></script>
-    <script src="entity/Warehouse.js"></script>
-    <script src="entity/Building.js"></script>
+    <script src="entity/resource/Resource.js"></script>
+    <script src="entity/building/Building.js"></script>
+    <script src="entity/building/Warehouse.js"></script>
+    <script src="entity/building/House.js"></script>
+    <script src="entity/resource/Food.js"></script>
+    <script src="entity/resource/Stone.js"></script>
+    <script src="entity/resource/Tree.js"></script>
     <script src="entity/Player.js"></script>
-    <script src="entity/Animation.js"></script>
-    <script src="entity/Tree.js"></script>
-    <script src="entity/Food.js"></script>
-    <script src="entity/Stone.js"></script>
     <script src="engine/Game.js"></script>
     <script src="engine/Box.js"></script>
     
@@ -63,4 +65,5 @@
     <script src="engine/Vector2D.js"></script>
     <script src="engine/Grid.js"></script>
     <script src="main.js"></script>
+    <script src="__test__/game.js"></script>
 </html>
