--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <script src="behavior_tree/btvillage/btwork/AssingNewJob.js"></script>
     <script src="behavior_tree/btvillage/btwork/HasNewJob.js"></script>
     <script src="behavior_tree/btvillage/btwork/BuildNode.js"></script>
+    <script src="behavior_tree/btvillage/btwork/IsBuilderNode.js"></script>
+    <script src="behavior_tree/btvillage/btwork/FindBuildingInProgress.js"></script>
+    <script src="behavior_tree/BehaviorTree.js"></script>
     
     <script src="collision/Kdtree.js"></script>
 
@@ -65,5 +68,5 @@
     <script src="engine/Vector2D.js"></script>
     <script src="engine/Grid.js"></script>
     <script src="main.js"></script>
-    <script src="__test__/game.js"></script>
+    <script src="__test__/test.js"></script>
 </html>
