Warehouse and House pixel art

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="behavior_tree/btvillage/btwork/BuildNode.js"></script>
     <script src="behavior_tree/btvillage/btwork/IsBuilderNode.js"></script>
     <script src="behavior_tree/btvillage/btwork/FindBuildingInProgress.js"></script>
+    <script src="behavior_tree/btvillage/btwork/BuildingInProgress.js"></script>
     <script src="behavior_tree/BehaviorTree.js"></script>
     
     <script src="collision/Kdtree.js"></script>
@@ -45,6 +46,7 @@
     <script src="entity/building/Building.js"></script>
     <script src="entity/building/Warehouse.js"></script>
     <script src="entity/building/House.js"></script>
+    <script src="entity/building/Sawmill.js"></script>
     <script src="entity/resource/Food.js"></script>
     <script src="entity/resource/Stone.js"></script>
     <script src="entity/resource/Tree.js"></script>
